--- a/language_map.html
+++ b/language_map.html
@@ -7,7 +7,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js'></script>
-	<script type="text/javascript" src="test.js"></script>
+	<script type="text/javascript" src="bundle.js"></script>
+	<!--script type="text/javascript" src="data.js"></script-->
 	<link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css' rel='stylesheet' />
 
 	<style>
