add entire presentation

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -9,16 +9,28 @@
   <div><em>why</em> are all programming languages</div>
   <div>in english?</div>
   <div><em>because</em> american hegemony</div>
+  <div><img src="circles.png"></div>
   <div><img src="redmonk_rankings.png"></div>
   <div><img src="language_map.png"></div>
-  <div><img src="circles.png"></div>
-  <!-- src = http://www.theregister.co.uk/2013/01/25/arabic_programming_language -->
   <div class="code">
     <em>Importar</em> "Pauscal.prp"<br>
     Mensaje("¡Hola Mundo!")<br>
     <em>Fin</em>
   </div>
+  <!-- src = http://www.theregister.co.uk/2013/01/25/arabic_programming_language -->
   <div><a href="http://youtu.be/77KAHPZUR8g">http://youtu.be/77KAHPZUR8g</a></div>
+  <div class="code">
+    ++++++++++[<em>></em>+++++++<em>></em>++++++++++<em>></em>+++<em><<<</em>-]<em>></em>++.<em>></em>+.+++++++..+++.<em>></em>++.<em><<</em>+++++++++++++++.<em>></em>.+++.------.--------.<em>></em>+.
+  </div>
+  <div><img src="piet_infinite_loop.png"></div>
+  <div><img src="piet_hello_world.png"></div>
+  <div class="code">
+    <em>HAI</em><br>
+    <em>CAN HAS</em> STDIO<em>?</em><br>
+    <em>VISIBLE</em> "HAI WORLD!"<br>
+    <em>KTHXBYE</em>
+  </div>
+  <div><img src="nyan_cat.png"></div>
   <!-- src = http://blog.codinghorror.com/the-ugly-american-programmer/ -->
   <div>on the internet, you can pretend <em>the world is flat</em></div>
   <div>whatever country you live in</div>
